Fized overflow issue in sidebar

--- a/www/sizes_n_stuff.css
+++ b/www/sizes_n_stuff.css
@@ -87,6 +87,10 @@ h2, h3{
   width: 100%;
 }
 
+.sidebar-collapse .sidebar-menu>li{
+  overflow: hidden;
+}
+
 .skin-blue .sidebar-menu>li>a{
   padding: 10px;
 }
